--- a/_r_tidyverse_curriculum_.Rmd
+++ b/_r_tidyverse_curriculum_.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "_r_tidyverse_curriculum_"
-output: html_document
+output: 
+  github_document:
+    toc: true
 ---
 
 ```{r setup, include=FALSE}
