--- a/the-5-verbs-of-dplyr-solutions.Rmd
+++ b/the-5-verbs-of-dplyr-solutions.Rmd
@@ -5,8 +5,8 @@ date: '2017-09-23'
 slug: the-5-verbs-of-dplyr-solutions
 categories: []
 tags: []
-output:
-  blogdown::html_page:
+output: 
+  github_document:
     toc: true
 ---
 
