--- a/_r_tidyverse_curriculum_.Rmd
+++ b/_r_tidyverse_curriculum_.Rmd
@@ -11,12 +11,37 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Getting started
 
+1. [Video: Getting oriented in Rstudio](https://www.youtube.com/watch?v=lTTJPRwnONE&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in&index=2)
+
 # Wrangling
+
+1. [Video: The pipe](https://www.youtube.com/watch?v=9yjhxvu-pDg&index=4&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in)
+
+1. [Video: The 5 verbs of dplyr](https://www.youtube.com/watch?v=sVISY_27znA&index=8&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in)
+
+1. [Article: The 5 verbs of dplyr](https://github.com/stenhaug/githubr_curriculum/blob/master/the-5-verbs-of-dplyr-article.md)
+
+1. [Exercise: The 5 verbs of dplyr](https://github.com/stenhaug/githubr_curriculum/blob/master/the-5-verbs-of-dplyr-exercise.md)
+
+1. [Exercise Solutions: The 5 verbs of dplyr](https://github.com/stenhaug/githubr_curriculum/blob/master/the-5-verbs-of-dplyr-solutions.md)
 
 # Visualization
 
 # Importing
 
+1. [Video: Working directory](https://www.youtube.com/watch?v=lWe7sMmynJk&index=6&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in)
+
+1. [Video: Saving and reading data](https://www.youtube.com/watch?v=Y3Nzz6WEl_E&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in&index=7)
+
+# A tiny bit of Base R
+
+1. [Video: Vectors, data frames, and lists](https://www.youtube.com/watch?v=XHAm_V-KZE8&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in&index=5)
+
+# Functions and mapping
+
+1. [Video: Map functions in purrr](https://www.youtube.com/watch?v=A8UaL47UXYE&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in&index=9)
+
+# Workflow, projects, and github
 
 
 
