--- a/the-5-verbs-of-dplyr-article.Rmd
+++ b/the-5-verbs-of-dplyr-article.Rmd
@@ -36,7 +36,7 @@ we're creating a data frame named hamsters. The first column is name and then we
 c stands for concatenate and its how we stick multiple things together. All strings (aka words) need to have quotes around them. The second column is gender and so on.
 
 By just running the name of the data frame, hamsters, it will show it to us
-and tell us a little bit about it. The 7 x 4 says it has 7 rows and 4 columns.
+and tell us a little bit about it. The 5 x 4 says it has 5 rows and 4 columns.
 Each column has a type: name and gender are <chr> which stands for characters,
 and the other columns are <dbl> which stands for double and is another word for number.
 
@@ -212,7 +212,7 @@ dataframe %>%
    group_by(a)
 ```
 
-![](/images/group_by.png)
+![](/Users/benstenhaug/Google Drive/Projects/Data Science Tutoring/githubr_curriculum/images/group_by.png)
 
 _Sourced from [R Bootcamp at Berkeley](https://github.com/berkeley-scf/r-bootcamp-2017)_
 
@@ -234,7 +234,7 @@ The final line is where the magic happens. It tells R to return only the gender 
 
 Notice that the male group isn't included because the max number of hamster cages is 4, not 3.
 
-Similarly, we can get the gender group where the mean number of hamsters is 6. This time its the male group because there are two males -- one with 1 hamster and the other with 2 hamsters.
+Similarly, we can get the gender group where the mean number of hamsters is 1.5. This time its the male group because there are two males -- one with 1 hamster and the other with 2 hamsters.
 
 ```{r}
 hamsters 
