--- a/_r_tidyverse_curriculum_.Rmd
+++ b/_r_tidyverse_curriculum_.Rmd
@@ -39,6 +39,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Functions and mapping
 
+1. [Video: Writing a function basics](https://www.youtube.com/watch?v=zA5eVuUMM8U&index=10&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in)
+
 1. [Video: Map functions in purrr](https://www.youtube.com/watch?v=A8UaL47UXYE&list=PLLxj8fULvXwGOf8uHlL4Tr62oXSB5k_in&index=9)
 
 # Workflow, projects, and github
